[tool.poetry]
name = "member_excel_ingestion"
version = "0.1.0"
description = ""
authors = ["Krisorn Chunhapongpipat"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
ruff = "^0.0.272"
pandas = "^2.0.2"
tabulate = "^0.9.0"
openpyxl = "^3.1.2"
mysql-connector-python = "^8.0.33"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# black 
line-length = 79
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# flake8
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "N", "Q"]

[tool.ruff.mccabe]
max-complexity = 10
